--- a/src/features/editors/VisualHTMLEditorLine.css
+++ b/src/features/editors/VisualHTMLEditorLine.css
@@ -1,5 +1,7 @@
 .line {
     white-space: nowrap;
+    width: 100%;
+    margin-right: 80px;
     padding: 3px 0 3px 0;
 }
 
